[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "daka"
version = "0.1.0"
description = "Simple new year resolution tracker (daka)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
daka = "daka.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
